oauth2.0 달기 직전으로 회귀

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,7 @@
 fastapi
 uvicorn
-oauthlib
-authlib
-python-dotenv
-httpx
-pyjwt
+python-jose
+passlib[bcrypt]
+pycryptodome
 openai
-pymupdf
-python-jose[cryptography]
-passlib==1.7.4
-bcrypt==3.1.7
+PyMuPDF
