--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
-fastapi
-uvicorn
-python-jose
-passlib[bcrypt]
-pycryptodome
-openai
-PyMuPDF
+fastapi==0.73.0
+uvicorn==0.17.0
+jose==3.3.0
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+pycryptodome==3.12.0
+python-dotenv==0.19.2
+pyMuPDF==1.19.6
+openai==0.11.1
